# onyx

backend/: pyproject.toml
backend/onyx/auth/: users.py
backend/onyx/seeding/: personas.yaml
deployment/docker_compose/: README.md  docker-compose.dev.yml
web/: Dockerfile  next.config.js  package-lock.json  package.json
web/messages/: en.json  ru.json
web/src/app/: layout.tsx
web/src/app/admin/add-connector/: page.tsx
web/src/app/admin/configuration/llm/: CustomLLMProviderUpdateForm.tsx  (+1 more)
web/src/app/admin/kg/: KGEntityTypes.tsx
web/src/app/admin/settings/: page.tsx
web/src/app/admin/token-rate-limits/: page.tsx
web/src/app/auth/login/: EmailPasswordForm.tsx  LoginText.tsx
web/src/app/auth/signup/: page.tsx
web/src/app/chat/input/: AgenticToggle.tsx
web/src/app/chat/modal/: UserSettingsModal.tsx
web/src/components/: AdvancedOptionsToggle.tsx  CleanupModal.tsx  ConnectorMultiSelect.tsx  DeleteEntityModal.tsx  Dropdown.tsx  OnyxInitializingLoader.tsx  UserDropdown.tsx
web/src/components/admin/: ClientLayout.tsx
web/src/components/admin/connectors/: AdminSidebar.tsx
web/src/components/auth/: AuthFlowContainer.tsx
web/src/components/chat/: ProviderContext.tsx  TextView.tsx  UnconfiguredLlmProviderText.tsx
web/src/components/header/: LogoWithText.tsx
web/src/components/icons/: icons.tsx
web/src/components/initialSetup/welcome/: WelcomeModal.tsx
web/src/components/llm/: ApiKeyModal.tsx
web/src/components/sidebar/: ChatSessionDisplay.tsx  HistorySidebar.tsx  PagesTab.tsx
web/tailwind-themes/custom/finam/: tailwind.config.js
(+7 files in other folders)
