[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"
mypy_path = "$MYPY_CONFIG_FILE_DIR"
explicit_package_bases = true
disallow_untyped_defs = true
enable_error_code = ["possibly-undefined"]
strict_equality = true
exclude = [
  "^generated/.*",
]

[[tool.mypy.overrides]]
module = "alembic.versions.*"
disable_error_code = ["var-annotated"]

[[tool.mypy.overrides]]
module = "alembic_tenants.versions.*"
disable_error_code = ["var-annotated"]

[[tool.mypy.overrides]]
module = "generated.*"
follow_imports = "silent"
ignore_errors = true

[tool.ruff]
line-length = 130

[tool.ruff.lint]
ignore = []
select = [
  "E",
  "F",
  "W",
]

[tool.uv]
python = "3.11"

[project]
name = "onyx-backend"
version = "0.1.0"
description = "Onyx Backend Application"
requires-python = ">=3.11"
dependencies = [
    "aioboto3==14.0.0",
    "aiohttp==3.11.16",
    "alembic==1.10.4",
    "asyncpg==0.30.0",
    "fastapi==0.115.12",
    "uvicorn==0.21.1",
    # Добавьте другие зависимости по необходимости
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-playwright",
    # Другие dev зависимости
]
model-server = [
    "transformers==4.49.0",
    "torch",
    # Другие model-server зависимости
] 